Fixed bug #26752 (Silent unterminated loop when length parameter for fgets(), fread() and fgetss() is 0).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@147659 c90b9560-bf6c-de11-be94-00142212c4b1